--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@types/node": "^22.10.2",
     "hardhat": "^2.28.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0"
   }
 }
-
