--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@types/node": "^22.10.2",
+    "dotenv": "^17.2.3",
     "hardhat": "^2.28.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
